--- a/css/estilos.css
+++ b/css/estilos.css
@@ -69,6 +69,7 @@ li{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 
     background-color: white;
     border-radius: 9px;
@@ -90,6 +91,7 @@ li img{
 }
 
 li p{
+    width: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
