--- a/css/estilos.css
+++ b/css/estilos.css
@@ -69,7 +69,6 @@ li{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
 
     background-color: white;
     border-radius: 9px;
@@ -81,8 +80,6 @@ li{
     margin: 10px 19px 10px 0;
 
     box-shadow: 0 0 5px 2px lightgray;
-
-    position: relative;
 }
 
 li img{
@@ -93,7 +90,6 @@ li img{
 }
 
 li p{
-    width: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -109,18 +105,8 @@ li p{
     color: #a6a6a6;
 }
 
-.preco-da-opcao{
+.preco-do-prato{
     font-size: 16px;
-}
-
-ion-icon{
-    color: green;
-    font-size: 20px;
-
-    position: absolute;
-
-    right: 10px;
-    bottom: 10px;
 }
 
 .barra-fim{
@@ -156,12 +142,4 @@ ion-icon{
 
 .verde{
     background-color: rgb(50, 183, 47);
-}
-
-.borda-verde{
-    border: 5px solid rgb(50, 183, 47);
-}
-
-.sumir{
-    display: none;
 }
