--- a/css/estilos.css
+++ b/css/estilos.css
@@ -69,6 +69,7 @@ li{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 
     background-color: white;
     border-radius: 9px;
@@ -80,6 +81,8 @@ li{
     margin: 10px 19px 10px 0;
 
     box-shadow: 0 0 5px 2px lightgray;
+
+    position: relative;
 }
 
 li img{
@@ -91,6 +94,8 @@ li img{
 
 li p{
     font-family: 'Roboto', sans-serif;
+
+    width: 100%;
 }
 
 .nome-da-opcao{
@@ -142,4 +147,21 @@ li p{
 
 .verde{
     background-color: rgb(50, 183, 47);
+}
+
+.selecionado{
+    border: 5px solid rgb(50, 183, 47);
+}
+
+.sumir{
+    display: none;
+}
+
+ion-icon{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+
+    color: rgb(50, 183, 47);
+    font-size: 22px;
 }
