--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,6 +73,7 @@ li{
 
     background-color: white;
     border-radius: 9px;
+    border: 5px solid white;
 
     width: 172px;
     height: 216px;
